@@ -1688,6 +1688,7 @@ function mostRecentComment($album, $i)
 function arrayToBarGraph ($array, $max_width, $table_values="CELLPADDING=5", 
 	$col_1_head=null, $col_2_head=null) 
 {
+	global $GALLERY_BASEDIR;
 	foreach ($array as $value) 
 	{
 		if ((IsSet($max_value) && ($value > $max_value)) ||
@@ -1701,7 +1702,7 @@ function arrayToBarGraph ($array, $max_width, $table_values="CELLPADDING=5",
 		// no results!
 		return null;
 	}
-	$string_to_return = "<TABLE $table_values>";
+	$string_to_return = "\n  <table $table_values>";
 	if ($col_1_head || $col_2_head)
 	{
 		$string_to_return.="<tr><td></td><td><span class=\"admin\">$col_1_head</span></td><td><span class=\"admin\">$col_2_head</span></td></tr>";
@@ -1718,14 +1719,14 @@ function arrayToBarGraph ($array, $max_width, $table_values="CELLPADDING=5",
 	$counter = 0;
 	foreach ($array as $name => $value) {
 		$bar_width = $value * $pixels_per_value;
-		$string_to_return .= "<tr> <td>" .
-		       	(++$counter) .
-		      	"</td> <td>$name ($value)</td> <td>" .
-			"<IMG SRC=\"images/bar.gif\" BORDER=\"1\" " .
-			"WIDTH=\"$bar_width\" HEIGHT=\"10\" alt=\"BAR\">" .
-		       "</td></tr>";
+		$string_to_return .= "\n\t<tr>"
+			. "\n\t<td>(". ++$counter .")</td>"
+			. "\n\t<td>$name ($value)</td>"
+			. "\n\t<td><img src=\"". $GALLERY_BASEDIR . "images/bar.gif\" bodre=\"1\""
+			. " width=\"$bar_width\" height=\"10\" alt=\"BAR\"></td>"
+			. "\n\t</tr>";
 	}
-	$string_to_return .= "</TABLE>";
+	$string_to_return .= "\n  </table";
 	return($string_to_return);
 }
 
